--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,18 +1,22 @@
 <resources>
     <string name="app_name">AndroidDemo</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="btn_intent_camera">Intent调用Camera</string>
+    <string name="btn_view_circle">圆形动画</string>
+
+    <!-- Intent调用Camera -->
     <string name="btn_photo_capture">拍照</string>
     <string name="btn_video_capture">录像</string>
 
-    <string name="btn_view_circle">圆形动画</string>
-    <string name="tv_circle_view_animation">CircleTextView属性动画</string>
-    <string name="tv_vertical_view_animation">VerticalTextView属性动画</string>
-
-    <string name="btn_circle_view_animation">CircleView动画</string>
-    <string name="btn_vertical_view_animation">VerticalView动画</string>
-
-    <string name="btn_circle_view_animation_set">CircleView动画集合</string>
-    <string name="btn_vertical_view_animation_set">VerticalView动画集合</string>
+    <!-- 圆形动画 -->
     <string name="tv_picker_side_date">DateSidePicker使用</string>
+    <string name="tv_circle_view_animation">CircleTextView属性动画</string>
+    <string name="btn_circle_view_animation">CircleView动画</string>
+    <string name="btn_circle_view_animation_set">CircleView动画集合</string>
+
+    <string name="tv_vertical_view_animation">VerticalTextView属性动画</string>
+    <string name="btn_vertical_view_animation">VerticalView动画</string>
+    <string name="btn_vertical_view_animation_set">VerticalView动画集合</string>
+
 
 </resources>
